k8s/manifest/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: go-web-app  # Name of the deployment
  labels:
    app: go-web-app
spec:
  replicas: 3  # Number of pods to be created
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app # Label to be matched with the selector
    spec:
      containers:
      - name: go-web-app
        image: soul693/go-web-app:v1  # Docker image name
        ports:
        - containerPort: 8080  # Port on which the application is running
