k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress  # Name of the ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: go-web-app.local  # Hostname of the ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app  # Name of the service
            port:
              number: 80  # Port on which the service is running
